# replacer

./: Cargo.toml  README.fr.md  README.md
benches/: performance.rs
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  parallel.rs  sequential.rs  specialized.rs
src/io/: buffered.rs  mod.rs  streaming.rs
