[package]
name = "replacer"
version = "0.1.2"
edition = "2024"

[lib]
name = "replacer"
path = "src/lib.rs"

[[bin]]
name = "replacer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
encoding_rs = "0.8.35"
indicatif = "0.18.3"
rayon = "1.11.0"
aho-corasick = "1.1.4"
once_cell = "1.21.3"
tempfile = "3.23.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "performance"
harness = false
